# drbfm-assist

./: .env.sample  .gitignore  .pre-commit-config.yaml  CLAUDE.md  GITHUB_DEV_GUIDE.md  GITHUB_INTEGRATION.md  GITHUB_SETUP_COMPLETE.md  GITHUB_SETUP_GUIDE.md  QUICK_REFERENCE.md  README.md  SETUP_REPORT.md  app_ebara.py  app_kitz.py  app_tadano.py  dev-setup.sh  docker-compose.yml  drbfm-assist.code-workspace  main.py  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  langgraph-dev.json  langgraph.json  pyproject.toml
backend/configs/: 6307204b.yaml  8d8232f3.yaml
backend/drassist/: auth.py  debug.py  graph.py
backend/drassist/chains/: __init__.py  base.py  change_extraction.py  drbfm_assist.py  drbfm_batch.py  drbfm_workflow.py  estimate_defects_and_countermeasures.py
backend/drassist/config/: __init__.py  manager.py
backend/drassist/embeddings/: __init__.py  azure_client.py  vertexai_client.py
backend/drassist/isp/: __init__.py  client.py  manager.py  query_builder.py
backend/drassist/llm/: gemini_client.py
backend/drassist/spec/elasticsearch/: defects.json
backend/drassist/text/: __init__.py  normalizer.py
denso_pfmea/backend/: .env.example  Makefile  langgraph-dev.json  langgraph.json  pyproject.toml
denso_pfmea/backend/config/: bop_rules.yaml
denso_pfmea/backend/config/prompts/: pfmea_assessment.md  pfmea_function_mapping.md  pfmea_risk_rating.md
denso_pfmea/backend/src/agent/: auth.py  graph.py  llm_result_parser.py  nodes.py  risk_rating_builder.py  state.py
denso_pfmea/backend/src/common/: __init__.py  concurrency.py  config.py  identifiers.py  paths.py  prompt_loader.py  single_instance.py  text_utils.py
denso_pfmea/backend/src/common/bop/: alignment.py  models.py  parser.py  settings.py
denso_pfmea/backend/src/common/pfmea/: models.py  ratings.py
denso_pfmea/backend/src/llm/: gemini_client.py
denso_pfmea/backend/src/services/: llm_batch_runner.py  llm_executor.py  llm_gateway.py  llm_metrics.py  llm_retry_policies.py  llm_schemas.py  llm_self_consistency.py  pfmea_ai.py  runtime_session.py
denso_pfmea/backend/src/services/circuit_breaker/: __init__.py  adaptive_limiter.py  global_breaker.py  models.py
denso_pfmea/backend/src/services/pfmea/: __init__.py  baseline_examples.py  function_mapper.py  mapping_execution.py  mapping_jobs.py  mapping_log_export.py  mapping_results.py  mapping_runtime.py  risk_rating.py
denso_pfmea/frontend/: .env.example  Dockerfile  pyproject.toml
denso_pfmea/frontend/.streamlit/: config.toml
denso_pfmea/frontend/config/: pfmea_ratings.yaml
denso_pfmea/frontend/src/: __init__.py  app.py  client.py  config.py
denso_pfmea/frontend/src/common/: config.py  env.py  perf.py  prompt_loader.py  single_instance.py  structured_logging.py  validation.py
denso_pfmea/frontend/src/common/bop/: __init__.py  alignment.py  constants.py  diff.py
denso_pfmea/frontend/src/common/pfmea/: __init__.py  constants.py  loader.py
denso_pfmea/frontend/src/services/: __init__.py  change_analysis.py  pfmea_context.py
denso_pfmea/frontend/src/services/change_pipeline/: __init__.py  alignment.py  baseline.py  models.py  overview.py  runner.py
denso_pfmea/frontend/src/services/datasets/: stage_tracker.py
denso_pfmea/frontend/src/services/pfmea/: __init__.py  cache_registry.py  function_mapper.py  mapping_cache_coordinator.py  mapping_context.py  (+4 more)
denso_pfmea/frontend/src/ui/: __init__.py  components.py  excel_styling.py  html_sanitization.py  pagination.py  session_keys.py  shared_constants.py  theme.py  view_models.py
ingestion/: .env.sample  Dockerfile  README.md  main.py  pyproject.toml
ingestion/common/: setup_local_proxy.sh
ingestion/common/bigquery/: __init__.py  client.py
ingestion/common/gcs/: __init__.py  client.py
ingestion/common/gemini/: __init__.py  analysis_parallel.py  client.py  embeddings.py  exceptions.py  image_analysis.py  retry.py  vertex_ai.py
ingestion/common/isp/: __init__.py  client.py  prepare_documents.py
ingestion/common/m2m_token_issuer/: __init__.py  client.py
ingestion/common/msqp/: __init__.py  client.py
ingestion/common/pipelines/: __init__.py  base.py
ingestion/common/pipelines/defects/: README.md  __init__.py  config.py  fetching.py  ingest.py  pipeline.py  processing.py
ingestion/common/pipelines/suzuki_technology_trends/: __init__.py  config.py  ingest.py  pipeline.py  processing.py
ingestion/common/prompts/: extract_attributes_from_failure_docs.txt
ingestion/common/utils/: __init__.py  batch_processing.py  doc_id.py  path.py  text_chunking.py
ingestion/docs/: add-new-tenant.md
ingestion/docs/ingestion-job-execution/: delete-isp-index-prod.md  dev-job-execution.md  kubectl_commands.md  local-dev-job-execution.md  prod-job-execution.md  stg-job-execution.md
ingestion/tenants/dev/a7753ab8-12e3-44f0-9ae6-9e85637b890e/: main.py
ingestion/tenants/prod/a9be2469-1fec-4b5c-9c11-51631eb9de70/: main.py
ingestion/tenants/prod/f9d59741-a6e4-4e76-b6a7-fde9601446d4/: main.py
ingestion/tests/: README.md  __init__.py  conftest.py
ingestion/tests/fixtures/: __init__.py  sample_data.py
ingestion/tests/mocks/: __init__.py  gcs_mock.py  gemini_mock.py  isp_mock.py  m2m_mock.py  msqp_mock.py
ingestion/tests/unit/: __init__.py  test_gcs_client.py  test_gemini_client.py  test_isp_client.py  test_msqp_client.py
ingestion/tests/unit/pipelines/: __init__.py  test_ingest.py  test_pipeline.py  test_processing.py
suzuki-technology-trends/backend/: langgraph.json  pyproject.toml
suzuki-technology-trends/backend/alembic/: env.py
suzuki-technology-trends/backend/alembic/versions/: 001_initial_migration.py
suzuki-technology-trends/backend/scripts/: create_migration.py  init_db.py
suzuki-technology-trends/backend/src/agent/: __init__.py  auth.py  defaults.py  graph.py  nodes.py  sanitize.py  utils.py
ui/: .dockerignore  .env.example  Dockerfile  app.py  app_drbfm_purpose.py  pyproject.toml
ui/src/: __init__.py  client.py  config.py  csv_utils.py  dataframe.py  formatters.py  validators.py  workflow.py
ui/tests/: test_parse_csv.py
(+179 files in other folders)
