[project]
name = "drbfm-assist-ui"
version = "0.1.0"
description = "DRBFM Assist UI - Streamlit frontend"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.50.0",
    "pandas>=2.0.0",
    "langgraph-sdk>=0.2.9",
    "httpx>=0.28.1",
    "loguru>=0.7.0",
    "pyjwt>=2.8.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"
